# dsi-360

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md
backend/: Dockerfile  pyproject.toml
backend/scripts/: pentest.py
backend/src/dsi360/: __init__.py
backend/src/dsi360/application/: __init__.py  activites.py  auth.py  autorisations.py  echeances.py  granularite_temps.py  import_equipements.py  indicateurs.py  ingestion.py  inventaire.py  notifications.py  projets.py  risques.py  taches.py
backend/src/dsi360/config/: __init__.py  acces.py  settings.py
backend/src/dsi360/domain/: __init__.py  activite.py  amortissement.py  changement.py  etats.py  revue.py  sla.py  texte.py
backend/src/dsi360/infrastructure/: __init__.py  audit.py  classeur.py  email.py  email_modeles.py  export.py  ingestion.py  ingestion_equipements.py  pdf.py  phases_sql.py  securite.py  tasks.py
backend/src/dsi360/infrastructure/db/: __init__.py  base.py  donnees_demo.py  migrate.py  promouvoir_admin.py  seed.py
backend/src/dsi360/infrastructure/repositories/: __init__.py  activite.py  campagne.py  equipement.py  groupe_support.py  jalon.py  modele_jalon.py  sla.py  tache.py  utilisateur.py
backend/src/dsi360/interface/: __init__.py  app.py  schemas.py  securite.py
backend/src/dsi360/interface/routeurs/: __init__.py  activites_communs.py  administration.py  analyses.py  apercu.py  audit_reco.py  auth.py  campagnes.py  changements.py  commentaires.py  cybersecurite.py  demandes.py  demandeurs.py  documents_communs.py  gouvernance.py  incidents.py  ingestion.py  inventaire.py  liens_communs.py  mes_tickets.py  notifications.py  projets.py  recherche.py  referentiels.py  risques.py  tableau_de_bord.py
backend/tests/integration/: conftest.py  test_analyses_flux.py  test_analyses_mensuel.py  test_auth.py  test_campagnes_inventaire.py  test_cloisonnement.py  test_cloture_et_valideurs.py  test_cloture_taches.py  test_constats_equipement.py  test_dernier_admin.py  test_description_incident.py  test_discussion_equipement.py  test_escalade.py  test_export_discussion.py  test_filtre_gestionnaire.py  test_frein_connexion.py  test_gardes_acteur.py  test_gardes_admin.py  test_gardes_tache.py  test_import_equipements.py  test_incarnation.py  test_ingestion.py  test_inventaire.py  test_journal_recherche.py  test_lecture_seule.py  test_liens.py  test_mdp_a_renouveler.py  test_mes_tickets_admin.py  test_niveau_obligatoire.py  test_niveau_support.py  test_permissions_detail.py  test_preferences_notif.py  test_profils.py  test_profils_crud.py  test_rappels_echeance.py  test_rbac.py  test_recherche_et_retard.py  test_referentiels_agents.py  test_securite.py  test_sla_activites_terminees.py  (+2 more)
backend/tests/unit/: test_amortissement.py  test_autorisations.py  test_domaine.py  test_echeances_paliers.py  test_emails_gabarit.py  test_lecture_classeurs.py  test_phases_etats.py
db/migrations/: 20260617120000_init_schemas.sql  20260617130000_acces_role.sql  20260617140000_audit_append_only.sql  20260617150000_notifications.sql  20260618160000_preferences_notification.sql  20260618170000_ingestion_ticketing.sql  20260618180000_commentaires.sql  20260618190000_sla_regles.sql  20260618200000_escalade.sql  20260618210000_normaliser_categories.sql  20260701120000_nettoyer_categories_parasites.sql  20260701130000_documents.sql  20260701140000_utilisateur_expiration.sql  20260701150000_reinitialisation_mdp.sql  20260703120000_taches.sql  20260703140000_sla_par_module.sql  20260703160000_sla_incidents_itil.sql  20260703180000_acteur_decision.sql  20260703200000_jalons.sql  20260706120000_jalon_rappel.sql  20260706140000_groupes_support.sql  20260707120000_groupes_support_direction.sql  20260707140000_commentaire_tache.sql  20260707160000_notes_liens.sql  20260708120000_lien_tache.sql  20260708140000_commentaire_edition.sql  20260708160000_commentaire_vue.sql  20260709120000_niveau_gestionnaire.sql  20260709140000_profils_dsi.sql  20260709180000_commentaire_image.sql  20260709200000_profils_metier.sql  20260710120000_index_roles_activite.sql  20260710140000_liens_activite_seulement.sql  20260710160000_niveau_deduit_du_gestionnaire.sql  20260710180000_frein_connexion.sql  20260710200000_sla_tickets_importes.sql  20260711120000_un_acteur_par_role.sql  20260716120000_gestionnaire_non_renseigne.sql  20260717120000_preference_son_notif.sql  20260718120000_rappels_echeance.sql  (+12 more)
docs/: 00-INDEX.md  01-ARCHITECTURE.md  02-DOMAIN-MODEL.md  03-API-CONTRACTS.md  04-SECURITY.md  05-DESIGN-SYSTEM.md  06-DEPLOIEMENT.md  07-ROADMAP.md  08-PLAN-EXECUTION.md
docs/adr/: 0001-choix-de-la-stack.md  (+4 more)
frontend/: Dockerfile  dev.mjs  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
infra/: docker-compose.yml
(+234 files in other folders)
